# miniWorld

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
assets/: external_catalog.json
assets/generators/: generate_sample_sprites.py  generate_sample_tiles.py
assets/licenses/: ASSETS_LICENSES.md
assets/mapping/: personas_binding.json  tileset_binding.json
assets/pixel_meta/sprites/: personas.meta.json  ui.meta.json
assets/pixel_meta/tilesets/: overworld_tileset.meta.json  town_tileset.meta.json
assets/sprites/user_character/: description.txt
data/world/: quests.json  world_state.json
frontend/: explorer.html  explorer.js
scripts/: fetch_assets.py  gen_sprite.py  verify_bindings.py
src/ai_groupchat/: __init__.py  app.py  config.py  main.py  models.py
src/ai_groupchat/services/: __init__.py  generator.py
src/miniWorld/: __init__.py  app.py  assets_api.py  config.py  main.py  models.py
src/miniWorld/services/: __init__.py  generator.py
src/miniWorld/world/: __init__.py  actions.py  chunk.py  quests.py  store.py  tiles.py  world_state.py
tests/: __init__.py  test_actions_rules.py  test_api_endpoints.py  test_assets_api.py  test_chat.py  test_chat_world_context.py  test_explorer_frontend.py  test_fetch_and_verify.py  test_health.py  test_personas.py  test_quests.py  test_sprite_gen.py  test_world.py  test_world_chunk.py
