[project]
name = "ai-groupchat"
version = "0.1.0"
description = "本地可运行的 AI 角色群聊模拟器后端原型"
authors = [{ name = "YOUR_NAME" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.3,<3.0",
]

[tool.black]
target-version = ["py311"]
line-length = 100
include = "src|tests"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
