[project]
name = "miniWorld"
version = "0.3.0"
description = "miniWorld: 六角色协同建设的离线像素世界模拟后端"
authors = [{ name = "YOUR_NAME" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
]

[tool.black]
target-version = ["py311"]
line-length = 100
include = "src|tests"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
